--- a/compose.yaml
+++ b/compose.yaml
@@ -9,8 +9,12 @@ services:
       MYSQL_ROOT_PASSWORD: 'secret'
     volumes:
       - mysql_data:/var/lib/mysql/
+      - ./script/start/01_create.sql:/docker-entrypoint-initdb.d/1.sql
+      - ./script/start/02_init.sql:/docker-entrypoint-initdb.d/2.sql
+
     networks:
-      - app-network
+      app-network:
+        ipv4_address: 172.18.0.2
   php:
     build:
       context: .
@@ -52,3 +56,6 @@ volumes:
   mysql_data:
 networks:
   app-network:
+    ipam:
+      config:
+        - subnet: 172.18.0.0/16
