--- a/config/services.yaml
+++ b/config/services.yaml
@@ -21,12 +21,12 @@ services:
             - '../src/Kernel.php'
 
     # add more service definitions when explicit configuration is needed
-    App\ClientApi\OpenFactFoodapi:
+    App\ClientApi\OpenFactFoodApi:
         arguments:
             $client: '@http_client'
     App\Repository\Product\ProductRepository:
         class: App\Repository\Product\ProductRepository
         arguments:
             $registry: '@doctrine'
-            $openFoodFactsApi: '@App\ClientApi\OpenFoodFactsApi'
+            $openFactFoodApi: '@App\ClientApi\OpenFactFoodApi'
     # please note that last definitions always *replace* previous ones
