--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,11 +1,11 @@
 doctrine:
     dbal:
         driver: 'pdo_mysql'
+        server_version: '8.2.0'
         url: '%env(resolve:DATABASE_URL)%'
-        charset: utf8
+        charset: utf8mb4
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
-        server_version: '15'
 
         profiling_collect_backtrace: '%kernel.debug%'
     orm:
