--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/framework-bundle": "7.0.*",
         "symfony/http-client": "7.0.*",
         "symfony/runtime": "7.0.*",
+        "symfony/security-bundle": "7.0.*",
         "symfony/validator": "7.0.*",
         "symfony/yaml": "7.0.*"
     },
@@ -69,6 +70,7 @@
         }
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.52",
         "symfony/stopwatch": "7.0.*",
         "symfony/web-profiler-bundle": "7.0.*"
     }
